--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#696969</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorSkyBlue">#48b4e0</color>
+    <color name="colorOrange">#FF8C00</color>
+    <color name="colorDarkGrey">#A9A9A9</color>
 </resources>
